--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,36 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Mi primera pagina
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true"> <!-- IOS -->
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Mi primera pagina</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
+    <ion-button color="danger">Botón</ion-button><br>
+    <ion-button color="warning" expand="full">Full Botón</ion-button>
+    <ion-button color="success" expand="block">Block Botón</ion-button>
+    
+    <ion-button size="small">Botón pequeño</ion-button><br>
+    <!-- https://ionic.io/ionicons -->
+<ion-button>
+  Right Icon
+  <ion-icon slot="start" name="add-circle-outline"></ion-icon>
+</ion-button>
+<ion-button>
+  Right Icon
+  <ion-icon slot="end" name="star"></ion-icon>
+</ion-button>
+    <br>
+    
+    <ion-button shape="round">Botón 2</ion-button><br>
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
