--- a/src/app/segunda/segunda.page.html
+++ b/src/app/segunda/segunda.page.html
@@ -28,9 +28,27 @@
     Nulo o Blanco
   </ion-button>
 
-  <h3>{{ apruebo }}</h3>
-  <h3>{{ rechazo }}</h3>
-  <h3>{{ otro }}</h3>
+  <br>
+  <br>
+  <br>
+  <h1 id="resultado">Resultados</h1>
+  <ion-row>
+    <ion-col size="6">Apruebo</ion-col>
+    <ion-col size="6">:{{ apruebo }}</ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">Rechazo</ion-col>
+    <ion-col size="6">:{{ rechazo }}</ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">Nulo/Blanco</ion-col>
+    <ion-col size="6">:{{ otro }}</ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">Total votos</ion-col>
+    <ion-col size="6">:{{ apruebo+rechazo+otro }}</ion-col>
+  </ion-row>
+
 
 </ion-content>
 
