--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -27,7 +27,7 @@
     <ion-button (click)="grabar(nombre, apellido, correo)" color="danger">
       <ion-icon slot="icon-only" name="radio-button-on-outline"></ion-icon>
     </ion-button>
-    <ion-button (click)="limpiar()" color="light" slot="end">
+    <ion-button (click)="limpiar(nombre, apellido, correo)" color="light" slot="end">
       <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
