--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -51,6 +51,11 @@
       Registro
     </ion-button>
 
+    <ion-button [routerLink]="['/listado']" color="warning">
+      <ion-icon slot="icon-only" name="list-outline"></ion-icon>
+      Listado
+    </ion-button>
+
     <h3>Opciones de botones</h3>
     <ion-button color="danger">Botón</ion-button><br>
     <ion-button color="warning" expand="full">Full Botón</ion-button>
