--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -56,6 +56,11 @@
       Listado
     </ion-button>
 
+    <ion-button [routerLink]="['/promedio']" color="warning">
+      <ion-icon slot="icon-only" name="school-outline"></ion-icon>
+      Promedio
+    </ion-button>
+
     <h3>Opciones de botones</h3>
     <ion-button color="danger">Botón</ion-button><br>
     <ion-button color="warning" expand="full">Full Botón</ion-button>
